# Spygram

./: .gitignore  README.md  pyproject.toml  requirements.txt
spygram/: __init__.py  __main__.py  auth.py  client.py  config.py  main.py  utils.py
spygram/scrapers/: __init__.py  highlights.py  posts.py  profile.py  reels.py  saved.py  stories.py  tagged.py
